:tada: update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.15)
 project(file_system_emulator)
 
 set(CMAKE_CXX_STANDARD 11)
-include_directories (include)
-aux_source_directory (src SRC)
-add_library (main "${SRC}")
-add_executable(emulator main.cpp)
-target_link_libraries (emulator main)
+
+FILE(GLOB Sources src/*.cpp)
+add_executable(emulator
+    main.cpp
+    ${Sources}
+)
+target_include_directories(emulator PRIVATE include)
